tests/rascal/negative/type_errors/L1/15_expression_ES10_D4_93.ob
MODULE Test15;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               y := (- ((+ (- 1223)) DIV ((+ z) DIV (- z))));
               y := ((((- 1) + (2 * 2)) + ((2 DIV x) MOD (+ 1223))) DIV (((1 + x) - (200 * 1223)) * ((1223 + z) MOD (+ y))));
               x := ((((1 MOD 1223) * (x + 1223)) * ((2 + 200) + (x + 1223))) + (((- y) DIV (y * z)) MOD ((+ x) - (0 - x))));
               r := (((+ (- 200)) MOD ((z MOD y) - (0 + 0))) < (+ (- (z MOD x))));
  (* error *)  x := (+ (((r MOD x) - (1223 - 1)) DIV ((200 MOD 0) - (- y))));
               q := (((- (2 - 0)) + ((+ y) DIV (1223 DIV 0))) < (+ ((x MOD z) DIV (- 1))));
               z := ((((- 0) + (200 * 1)) * ((1223 + 0) + (1223 + 0))) * (((- 1) - (+ y)) + ((+ 1) * (- y))));
               z := ((- ((+ x) MOD (- y))) MOD ((+ (y - 1223)) MOD ((+ 2) + (- 1223))));
               r := ((((200 - 200) - (200 * 1223)) MOD ((+ 0) DIV (- y))) = (((2 + 200) - (+ x)) DIV (+ (+ z))));
               p := ((((1223 * z) DIV (0 DIV y)) DIV ((- z) MOD (1223 DIV z))) < (((1 DIV z) + (z MOD 1223)) - ((0 + 1) MOD (+ 200))))
END Test15.